--- a/src/styles/estate-sale-list.module.scss
+++ b/src/styles/estate-sale-list.module.scss
@@ -9,4 +9,17 @@
 	height: 600px;
 	width: 300px;
 	box-shadow: 0 0 10px #ccc;
+	display:flex;
+	flex-direction: column;
+	justify-content: flex-start;
+}
+
+.content {
+	padding: 10px;
+	max-height: 30%;
+	overflow: auto;
+}
+
+.saleImages {
+	max-height: 60%;
 }
