--- a/src/styles/estate-sale-list.module.scss
+++ b/src/styles/estate-sale-list.module.scss
@@ -19,6 +19,11 @@
 
 	.thumbnailSliderWrapper {
 		width: 40%;
+		text-align: center;
+
+		.thumbnailSliderTitle {
+			padding-bottom: 20px;
+		}
 	}
 }
 
