--- a/src/styles/estate-sale-list.module.scss
+++ b/src/styles/estate-sale-list.module.scss
@@ -23,6 +23,34 @@
 
 		.thumbnailSliderTitle {
 			padding-bottom: 20px;
+			width: 100%;
+			white-space: nowrap;
+		}
+
+		.prevNextContainer {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			gap: 20px;
+
+			button {
+				color: black;
+				background-color: lightgreen;
+				padding: 10px 20px;
+				border: none;
+				border-radius: 8px;
+				transition: all 0.3s ease-in-out;
+
+				&:hover {
+					transform: scale(1.05);
+					box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
+				}
+
+				&:active {
+					transform: scale(0.95);
+					box-shadow: none;
+				}
+			}
 		}
 	}
 }
@@ -84,9 +112,18 @@
 	.estateSaleList {
 		max-width: 100%;
 		padding: 25px;
+		flex-direction: column-reverse;
+		justify-content: flex-start;
 
-		.detailedSliderWrapper {
+		margin: 0 auto;
+
+		.thumbnailSlider {
+			display: none;				
+		}
+
+		.detailedSliderWrapper, .thumbnailSliderWrapper {
 			width: 100%;
+
 		}
 	}
 }
