--- a/src/styles/estate-sale-list.module.scss
+++ b/src/styles/estate-sale-list.module.scss
@@ -132,7 +132,7 @@
 
 @include mobile() {
 	.saleCard {
-		min-width: 100%;
+		width: 100%;
 		max-height: 50%;
 		min-height: 50%;
 		padding: 10px;
