--- a/src/styles/estate-sale-list.module.scss
+++ b/src/styles/estate-sale-list.module.scss
@@ -149,7 +149,7 @@
 		max-width: 100%;
 		padding: 25px;
 		flex-direction: column-reverse;
-		justify-content: flex-start;
+		justify-content: flex-end;
 		gap: 40px;
 		margin: 0 auto;
 
