initial cron and change keys to lowercase

--- a/src/styles/tab-header.module.scss
+++ b/src/styles/tab-header.module.scss
@@ -12,6 +12,7 @@
 
 		.tabHeaderButton{
 			border-bottom: 1px solid transparent;
+			text-transform: capitalize;
 			&.activeTab {
 				color: lightgreen;
 				border-bottom: 1px solid lightgreen;
