--- a/src/styles/popover.module.css
+++ b/src/styles/popover.module.css
@@ -23,4 +23,9 @@
   min-width: 80px;
   height: auto;
 }
+
+.popover .popoverContent.big {
+  width: 300px;
+  height: 400px;
+}
 /*# sourceMappingURL=popover.module.css.map */
