fix mobile/desktop layouts

--- a/src/styles/map.module.scss
+++ b/src/styles/map.module.scss
@@ -7,9 +7,10 @@
 	align-items: center;
 }
 
-@include mobile() {
+@include mobile {
 	.mapContainer {
 		justify-content: center;
 		align-items: center;
+		flex-direction: column;
 	}
 }
