--- a/src/styles/map.module.css
+++ b/src/styles/map.module.css
@@ -17,6 +17,10 @@
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 /*# sourceMappingURL=map.module.css.map */
