--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,7 +1,9 @@
 @mixin mobile {
-  @media (max-width: 500px) { @content; }
+  @media (max-width: 599px) { @content; }
 }
 
 @mixin tablet {
-  @media (max-width: 500px) { @content; }
+  @media only screen and (min-width: 599px) and (max-width: 1280px) {
+    @content;
+  }
 }
