--- a/src/styles/map.module.scss
+++ b/src/styles/map.module.scss
@@ -5,6 +5,12 @@
 	height: 100vh;
 	display: flex;
 	align-items: center;
+
+	.map {
+		margin: auto;
+		height: 400px;
+		width: 800px;
+	}
 }
 
 @include mobile {
@@ -12,5 +18,9 @@
 		justify-content: center;
 		align-items: center;
 		flex-direction: column;
+
+		.map {
+			width: 100%;
+		}
 	}
 }
