initial map sale card logic

--- a/src/styles/map.module.css
+++ b/src/styles/map.module.css
@@ -30,6 +30,7 @@
   }
   .mapContainer .map {
     width: 100%;
+    height: calc(100% - 180px);
   }
 }
 /*# sourceMappingURL=map.module.css.map */
