--- a/src/styles/map.module.css
+++ b/src/styles/map.module.css
@@ -1,6 +1,7 @@
 .mapContainer {
   width: 100%;
   height: 100vh;
+  max-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -15,6 +16,10 @@
   width: 800px;
 }
 
+.mapContainer .mapSaleCard {
+  max-width: 100%;
+}
+
 @media (max-width: 599px) {
   .mapContainer {
     -webkit-box-pack: center;
@@ -27,10 +32,74 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    position: relative;
   }
   .mapContainer .map {
     width: 100%;
-    height: calc(100% - 180px);
+    height: calc(100% - 120px);
+    margin: unset;
+    margin-top: auto;
+    position: relative;
+  }
+  .mapContainer .map .mapSaleCard {
+    background-color: black;
+    padding-top: 8px;
+    max-width: 100%;
+    width: 100%;
+    text-align: center;
+    z-index: 10;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    -webkit-transition: height 250ms ease-in-out;
+    transition: height 250ms ease-in-out;
+  }
+  .mapContainer .map .mapSaleCard.hidden {
+    height: 0;
+  }
+  .mapContainer .map .mapSaleCard.minimized {
+    height: 200px;
+  }
+  .mapContainer .map .mapSaleCard.full {
+    height: 100%;
+  }
+  .mapContainer .map .mapSaleCard h3 {
+    margin-bottom: 10px;
+    color: white;
+  }
+  .mapContainer .map .mapSaleCard .saleImage.minimized {
+    -o-object-fit: contain;
+       object-fit: contain;
+    max-height: 180px;
+  }
+  .mapContainer .map .mapSaleCard .minimizedHeader {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .mapContainer .map .mapSaleCard .viewToggle {
+    background-color: black;
+    color: white;
+    border: 0;
+    padding: 4px 10px;
+    -webkit-transition: -webkit-transform 250ms linear;
+    transition: -webkit-transform 250ms linear;
+    transition: transform 250ms linear;
+    transition: transform 250ms linear, -webkit-transform 250ms linear;
+  }
+  .mapContainer .map .mapSaleCard .viewToggle.up {
+    -webkit-transform: rotate(-90deg);
+            transform: rotate(-90deg);
+    margin-bottom: 10px;
+  }
+  .mapContainer .map .mapSaleCard .viewToggle.down {
+    margin-top: 10px;
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
   }
 }
 /*# sourceMappingURL=map.module.css.map */
