--- a/src/styles/map.module.scss
+++ b/src/styles/map.module.scss
@@ -3,6 +3,7 @@
 .mapContainer {
 	width: 100%;
 	height: 100vh;
+	max-height: 100vh;
 	display: flex;
 	align-items: center;
 
@@ -11,6 +12,10 @@
 		height: 400px;
 		width: 800px;
 	}
+
+	.mapSaleCard {
+		max-width: 100%;
+	}
 }
 
 @include mobile {
@@ -18,11 +23,77 @@
 		justify-content: center;
 		align-items: center;
 		flex-direction: column;
+		position: relative;
 
 		.map {
 			width: 100%;
-			// 180px for header
-			height: calc(100% - 180px);
+			// 120px for header
+			height: calc(100% - 120px);
+			margin: unset;
+			margin-top: auto;
+			position: relative;
+
+			.mapSaleCard {
+				background-color: black;
+				padding-top: 8px;
+				max-width: 100%;
+				width: 100%;
+				text-align: center;
+				z-index: 10;
+		
+				position: absolute;
+				bottom: 0;
+				left: 0;
+				right: 0;
+		
+				transition: height 250ms ease-in-out;
+
+				&.hidden {
+					height: 0;
+				}
+		
+				&.minimized {
+					height: 200px
+				}
+
+				&.full {
+					height: 100%;
+				}
+
+				h3 {
+					margin-bottom: 10px;
+					color: white;
+				}
+
+				.saleImage {
+					&.minimized {
+						object-fit: contain;
+						max-height: 180px;
+					}
+				}
+
+				.minimizedHeader {
+					display: flex;
+					justify-content: space-between;
+				}
+				
+				.viewToggle {
+					background-color: black;
+					color: white;
+					border: 0;
+					padding: 4px 10px;
+					transition: transform 250ms linear;
+					
+					&.up {
+						transform: rotate(-90deg);
+						margin-bottom: 10px;
+					}
+					&.down {
+						margin-top: 10px;
+						transform: rotate(90deg);
+					}
+				}
+			}
 		}
 	}
 }
