--- a/src/styles/map.module.css
+++ b/src/styles/map.module.css
@@ -43,35 +43,65 @@
   }
   .mapContainer .map .mapSaleCard {
     background-color: black;
+    color: white;
     padding-top: 8px;
     max-width: 100%;
     width: 100%;
     text-align: center;
-    z-index: 10;
+    -webkit-transition: height 250ms ease-in-out;
+    transition: height 250ms ease-in-out;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
-    -webkit-transition: height 250ms ease-in-out;
-    transition: height 250ms ease-in-out;
+    z-index: 10;
   }
   .mapContainer .map .mapSaleCard.hidden {
     height: 0;
   }
   .mapContainer .map .mapSaleCard.minimized {
-    height: 200px;
+    height: 40%;
+  }
+  .mapContainer .map .mapSaleCard.minimized .imageSliderWrapper {
+    margin-top: auto;
+    margin-bottom: auto;
   }
   .mapContainer .map .mapSaleCard.full {
     height: 100%;
+    padding: 0 25px 25px;
+  }
+  .mapContainer .map .mapSaleCard.full .imageSliderWrapper {
+    margin-bottom: 0;
+    max-height: 50%;
   }
   .mapContainer .map .mapSaleCard h3 {
     margin-bottom: 10px;
     color: white;
   }
+  .mapContainer .map .mapSaleCard .content {
+    text-align: left;
+    max-height: 40%;
+    overflow-y: scroll;
+  }
+  .mapContainer .map .mapSaleCard .imageSliderWrapper {
+    margin-top: auto;
+  }
+  .mapContainer .map .mapSaleCard .saleImage {
+    max-height: 300px;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
   .mapContainer .map .mapSaleCard .saleImage.minimized {
     -o-object-fit: contain;
        object-fit: contain;
-    max-height: 180px;
+    max-height: 200px;
   }
   .mapContainer .map .mapSaleCard .minimizedHeader {
     display: -webkit-box;
