--- a/src/styles/map.module.css
+++ b/src/styles/map.module.css
@@ -132,4 +132,11 @@
             transform: rotate(90deg);
   }
 }
+
+.infoBoxS .infoBoxContainer {
+  background-color: black;
+  color: white;
+  max-width: 70%;
+  padding: 20px;
+}
 /*# sourceMappingURL=map.module.css.map */
