--- a/src/styles/map.module.css
+++ b/src/styles/map.module.css
@@ -1,6 +1,11 @@
+#__next {
+  --doc-height: 100%;
+}
+
 .mapContainer {
   width: 100%;
   height: 100vh;
+  height: var(--doc-height);
   max-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
