--- a/src/styles/map.module.scss
+++ b/src/styles/map.module.scss
@@ -1,8 +1,13 @@
 @import './mixins.scss';
 
+#__next {
+	--doc-height: 100%;
+}
+
 .mapContainer {
 	width: 100%;
 	height: 100vh;
+	height: var(--doc-height);
 	max-height: 100vh;
 	display: flex;
 	align-items: center;
@@ -17,10 +22,6 @@
 		max-width: 100%;
 	}
 }
-
-// .fakeHeader {
-// 	height: 60px
-// }
 
 @include mobile {
 	.mapContainer {
