--- a/src/styles/estate-sale-list.module.css
+++ b/src/styles/estate-sale-list.module.css
@@ -1,3 +1,21 @@
+@-webkit-keyframes skeleton-loading {
+  0% {
+    background-color: #3c3939;
+  }
+  100% {
+    background-color: #141414;
+  }
+}
+
+@keyframes skeleton-loading {
+  0% {
+    background-color: #3c3939;
+  }
+  100% {
+    background-color: #141414;
+  }
+}
+
 .estateSaleList {
   max-width: 1440px;
   margin: auto;
