--- a/src/styles/follow-button.module.css
+++ b/src/styles/follow-button.module.css
@@ -1,3 +1,21 @@
+@-webkit-keyframes skeleton-loading {
+  0% {
+    background-color: #3c3939;
+  }
+  100% {
+    background-color: #141414;
+  }
+}
+
+@keyframes skeleton-loading {
+  0% {
+    background-color: #3c3939;
+  }
+  100% {
+    background-color: #141414;
+  }
+}
+
 .followSale {
   color: black;
   background-color: lightgreen;
@@ -7,7 +25,7 @@
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   width: 50%;
-  margin: 0 auto 5px;
+  margin: 0 auto 20px;
 }
 
 .followSale:hover {
@@ -22,6 +40,16 @@
           transform: scale(0.95);
   -webkit-box-shadow: none;
           box-shadow: none;
+}
+
+.followSale.skeleton {
+  -webkit-animation: skeleton-loading 1s linear infinite alternate;
+          animation: skeleton-loading 1s linear infinite alternate;
+  height: 40px;
+  width: 50%;
+  -webkit-transform: unset;
+          transform: unset;
+  font-size: 0;
 }
 
 .popoverWrapper {
