--- a/src/styles/follow-button.module.scss
+++ b/src/styles/follow-button.module.scss
@@ -1,4 +1,4 @@
-
+@import './mixins.scss';
 
 .followSale {
 	color: black;
@@ -8,7 +8,7 @@
 	border-radius: 8px;
 	transition: all 0.3s ease-in-out;
 	width: 50%;
-	margin: 0 auto 5px;
+	margin: 0 auto 20px;
 
 	&:hover {
 		transform: scale(1.05);
@@ -18,6 +18,15 @@
 	&:active {
 		transform: scale(0.95);
 		box-shadow: none;
+	}
+
+	&.skeleton {
+		@include skeleton();
+
+		height: 40px;
+		width: 50%;
+		transform: unset;
+		font-size: 0;
 	}
 }
 
