--- a/src/styles/map.module.scss
+++ b/src/styles/map.module.scss
@@ -77,7 +77,8 @@
 					padding: 0 25px 25px;
 
 					.imageSliderWrapper {
-						margin-bottom: 0;
+						margin-top: auto;
+						margin-bottom: auto;
 						max-height: 50%;
 					}
 				}
@@ -127,6 +128,21 @@
 					&.down {
 						margin-top: 10px;
 						transform: rotate(90deg);
+					}
+				}
+
+				.host {
+					margin-left: auto;
+					padding: 0 10px 10px;
+			
+					a {
+						text-decoration: underline;
+					}
+			
+					&.skeleton {
+						width: 30%;
+						margin-bottom: 10px;
+						@include skeleton();
 					}
 				}
 			}
