onMount logic and better mobile styling

--- a/src/styles/map.module.css
+++ b/src/styles/map.module.css
@@ -93,6 +93,9 @@
     margin-top: unset;
     position: relative;
   }
+  .mapContainer .map .salesThisWeekBtn {
+    margin: 10px;
+  }
   .mapContainer .map .mapSaleCard {
     background-color: black;
     color: white;
