--- a/src/styles/map.module.scss
+++ b/src/styles/map.module.scss
@@ -65,6 +65,10 @@
 			margin-top: unset;
 			position: relative;
 
+			.salesThisWeekBtn {
+				margin: 10px;
+			}
+
 			.mapSaleCard {
 				background-color: black;
 				color: white;
