fix image moving thign

--- a/src/styles/map.module.scss
+++ b/src/styles/map.module.scss
@@ -146,6 +146,7 @@
 				.content {
 					text-align: left;
 					max-height: 40%;
+					min-height: 40%;
 					overflow-y: scroll;
 
 					&.skeleton {
