--- a/src/styles/map.module.css
+++ b/src/styles/map.module.css
@@ -169,6 +169,7 @@
   .mapContainer .map .mapSaleCard .content {
     text-align: left;
     max-height: 40%;
+    min-height: 40%;
     overflow-y: scroll;
   }
   .mapContainer .map .mapSaleCard .content.skeleton {
